# ticket-bot

./: Cargo.toml  README.md  config.example.toml
migrations/: 20210811020309_panels_table.sql  20210812162557_tickets.sql
src/: handler.rs  interaction.rs  main.rs
src/commands/: add.rs  close.rs  delete.rs  mod.rs  open.rs  panel.rs
src/handlers/: close.rs  delete.rs  mod.rs  open.rs
src/interactions/: mod.rs  panel.rs  ticketclose.rs  ticketdelete.rs  ticketopen.rs
src/utils/: config.rs  database.rs  files.rs  mod.rs  utils.rs
