[package]
name = "ticketbot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.10.8", default-features = true, features = ["rustls_backend", "unstable_discord_api"]}
tokio = { version = "1.10", features = ["macros", "rt-multi-thread", "sync"] }
sqlx = { version = "0.5.5", features = [ "postgres", 'runtime-tokio-rustls', 'macros', 'uuid' ] }
dotenv = "0.15.0"
serde_json = "1.0.59"
serde = "1.0.117"
anyhow = '1.0.42'
tracing = "0.1.23"
tracing-subscriber = "0.2"
time = {version = '0.3', features = ['std', 'formatting', 'macros']}
config = '0.11'
lazy_static = "1.4"
regex = "1.5.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
once_cell = "1.8"